<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/home"
            android:text="@string/home"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/event"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_item_album"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/playing"
            android:text="@string/playing"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/album_progressbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/album_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />

        </LinearLayout>

        <ListView
            android:id="@+id/album_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/new_record"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/left_button_background"
            android:text="@string/new_record"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/topseller"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/right_button_background"
            android:text="@string/topseller"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
